增加很多注入类型

--- a/Pingfan.Inject/Pingfan.Inject.csproj
+++ b/Pingfan.Inject/Pingfan.Inject.csproj
@@ -12,6 +12,7 @@
         <PackageTags>inject, DI</PackageTags>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageIcon>logo.png</PackageIcon>
+        <Version>1.0.1</Version>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
